# aw-watcher-input

./: Makefile  README.md  pyproject.toml  sd-watcher-input.spec
.github/workflows/: build.yml
src/sd_watcher_input/: __main__.py  main.py
visualization/: package-lock.json  package.json
visualization/src/: index.js  index.pug
